syntax = "proto3";

option go_package = "/server";

service Etcd {
  rpc Get(GetRequest) returns (Response);
  rpc Post(PostRequest) returns (Response);
  rpc Delete(DeleteRequest) returns (Response);
}

message GetRequest {
  string key = 1;
}

message PostRequest {
  string key = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}

message Response {
  string body = 1;
}